@@ -50,6 +50,11 @@ int v4lconvert_try_format(struct v4lconvert_data *data,
    the end of the list */
 int v4lconvert_enum_fmt(struct v4lconvert_data *data, struct v4l2_fmtdesc *fmt);
 
+/* Is conversion necessary or can the app use the data directly? */
+int v4lconvert_needs_conversion(struct v4lconvert_data *data,
+  const struct v4l2_format *src_fmt,   /* in */
+  const struct v4l2_format *dest_fmt); /* in */
+
 /* return value of -1 on error, otherwise the amount of bytes written to
    dest */
 int v4lconvert_convert(struct v4lconvert_data *data,
